// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idが設定できる 1`] = `
Object {
  "configWindow": Object {
    "isActive": false,
    "scanSpeed": 0,
  },
  "cursol": Object {
    "activeColumn": 0,
  },
  "estimator": Object {
    "id": null,
    "result": "",
  },
  "timer": Object {
    "id": 1234,
    "isActive": false,
    "scanSpeed": 500,
  },
}
`;

exports[`isActiveが設定できる falseの場合 1`] = `
Object {
  "configWindow": Object {
    "isActive": false,
    "scanSpeed": 0,
  },
  "cursol": Object {
    "activeColumn": 0,
  },
  "estimator": Object {
    "id": null,
    "result": "",
  },
  "timer": Object {
    "id": null,
    "isActive": false,
    "scanSpeed": 500,
  },
}
`;

exports[`isActiveが設定できる trueの場合 1`] = `
Object {
  "configWindow": Object {
    "isActive": false,
    "scanSpeed": 0,
  },
  "cursol": Object {
    "activeColumn": 0,
  },
  "estimator": Object {
    "id": null,
    "result": "",
  },
  "timer": Object {
    "id": null,
    "isActive": true,
    "scanSpeed": 500,
  },
}
`;

exports[`scanSpeedが設定できる 1`] = `
Object {
  "configWindow": Object {
    "isActive": false,
    "scanSpeed": 0,
  },
  "cursol": Object {
    "activeColumn": 0,
  },
  "estimator": Object {
    "id": null,
    "result": "",
  },
  "timer": Object {
    "id": null,
    "isActive": false,
    "scanSpeed": 234,
  },
}
`;
